--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,23 +1,8 @@
 [supervisord]
 nodaemon=true
 
-[program:postgresql]
-user=postgres
-command=/usr/lib/postgresql/9.4/bin/postgres -D /var/lib/postgresql/9.4/main -c config_file=/etc/postgresql/9.4/main/postgresql.conf
-
-[program:memcached]
-user=memcache
-command=/usr/bin/memcached -m 64 -p 11211 -u memcache -l 127.0.0.1
-
-[program:php5-fpm]
-command=/usr/sbin/php5-fpm --nodaemonize -c /etc/php5/fpm/php-fpm.conf 
-autostart=true
-autorestart=true
-priority=5
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+[program:php7-fpm]
+command=/usr/sbin/php-fpm7.3 --nodaemonize -c /etc/php/7.3/fpm/php-fpm.conf
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
