--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,6 +7,10 @@ command=/usr/sbin/php-fpm7.3 --nodaemonize -c /etc/php/7.3/fpm/php-fpm.conf
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 
+[program:haproxy]
+command=/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg
+autorestart=true
+
 [program:freeswitch]
 autorestart=true
 command=/bin/sh /usr/bin/start-freeswitch.sh
